workloads/wedding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding
  namespace: wedding
  labels:
    app: wedding
spec:
  selector:
    app: wedding
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
