workloads/wedding/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wedding
  namespace: wedding
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - wedding.ndsquared.net
  rules:
    - backendRefs:
        - name: wedding
          port: 80
